# ticket-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  database.cpp  database.h  db_conn.cpp  db_conn.h  events.cpp  events.h  file.cpp  file.h  main.cpp  ticket.cpp  ticket.h  ticket_manager.cpp  ticket_manager.h
